# ChangeLog for dev-python/lettuce
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*lettuce-0.1.31 (18 Aug 2011)

  18 Aug 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.31.ebuild:
  Version bump [445].

  08 Jun 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.26.ebuild,
  lettuce-0.1.27.ebuild:
  Keyworded x86.

  07 Jun 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.27.ebuild:
  Keyworded amd64.

  17 May 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.25.ebuild,
  lettuce-0.1.26.ebuild:
  Keyworded x86.

  17 May 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.26.ebuild:
  Keyworded amd64.

*lettuce-0.1.27 (09 May 2011)

  09 May 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.27.ebuild:
  Version bump [357].

  05 May 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.21.ebuild,
  lettuce-0.1.25.ebuild:
  Keyworded x86.

  05 May 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.25.ebuild:
  Keyworded amd64.

*lettuce-0.1.26 (17 Apr 2011)

  17 Apr 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.26.ebuild:
  Version bump [342].

*lettuce-0.1.25 (05 Apr 2011)

  05 Apr 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.25.ebuild:
  Version bump [319].

  01 Apr 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.20.ebuild,
  lettuce-0.1.21.ebuild:
  Keyworded x86.

  31 Mar 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.21.ebuild:
  Keyworded amd64.

  23 Mar 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.19.ebuild,
  lettuce-0.1.20.ebuild:
  Keyworded x86.

  22 Mar 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.20.ebuild:
  Keyworded amd64.

*lettuce-0.1.21 (01 Mar 2011)

  01 Mar 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.21.ebuild:
  Version bump [298].

  21 Feb 2011; James Rowe <jnrowe@gmail.com> -lettuce-0.1.18.ebuild,
  lettuce-0.1.19.ebuild:
  Keyworded x86.

  21 Feb 2011; James Rowe <jnrowe@gmail.com> lettuce-0.1.19.ebuild:
  Keyworded amd64.
