@@ -3,15 +3,17 @@ Hash: SHA512
 
 DIST lettuce-0.1.27.tar.gz 70923 RMD160 65a9c62041fb8c15b060e2510c5e6c6115e345c9 SHA1 233773621cb35d3831d8873ea4bb5e157fefede1 SHA256 418275557dde788df6f8c59f2b1670bc17786a75169a96e7b4f2a970252731e5
 DIST lettuce-0.1.31.tar.gz 76558 RMD160 19b1a28d7c7602fc765783d89edec681e102b015 SHA1 8fa404a87cca2d40c57e71e8bea589f7ef2901cd SHA256 ddfd3ab52b889f87ba970fd5c929935b282e399e72a24cddcd2fd85ddb275364
+DIST lettuce-0.1.32.tar.gz 72210 RMD160 f8fdd99a18018d1fdfd3b331aa229e47c9aa5800 SHA1 df69dbf59cf862e7a94c642073034b1835094481 SHA256 afba4fc8563a65ae915a8f3bcadfcf32f6bfdf6dc6ab52a86cd95c208a0249d0
 EBUILD lettuce-0.1.27.ebuild 525 RMD160 37e055fb255790622d4237a1bc750d3905fcb0fa SHA1 08a96cc5b5f8a700de88024eca713f6adaaee753 SHA256 7e555bf3339871fad8bc02daaf7189c86247dca3dc5e99476f0322998637f3db
 EBUILD lettuce-0.1.31.ebuild 527 RMD160 2e8d390a94bef2f622567ddc611ac6e9dd158b42 SHA1 88448bb875d2e6d04d0e831d27a60ac5a5bc2551 SHA256 d02fb78b55246fa08426c8acae32344b29e1e69d342bfbf2a4aa814430446368
-MISC ChangeLog 6781 RMD160 0808bd8900608b4c66f6845fab856f4991aef35b SHA1 3fb1d168e6f586b9f02ca219e0f15d0c53b12c1b SHA256 4afb92458e3b2160a5ec98a4dcf66274cada06bbd79195d881f958b523b87ee5
+EBUILD lettuce-0.1.32.ebuild 527 RMD160 2e8d390a94bef2f622567ddc611ac6e9dd158b42 SHA1 88448bb875d2e6d04d0e831d27a60ac5a5bc2551 SHA256 d02fb78b55246fa08426c8acae32344b29e1e69d342bfbf2a4aa814430446368
+MISC ChangeLog 6904 RMD160 aa80cc1c41df36043f43f047bb9503e62b6805ea SHA1 4b0cc96856b273d9f1c42b507656f9399efbfb8c SHA256 383c31fb3d968ab5cacaba4be489bd2f858710ac1efd3f9ffab1212609f6d807
 MISC metadata.xml 543 RMD160 ba3769e47c6fd85b04b312ae9e19f0b7df54d047 SHA1 9348d7b60519187a8c2634ed087236ae176d3c9b SHA256 ea4a59405434a4b345393c1bc788273477110612782560fa496f8e92c5357db3
 MISC watch 71 RMD160 edd7da79f12dfdb2aefdeef0ad84169198ac81e1 SHA1 179d11f0283700ba50fec038510e6799bf4cda97 SHA256 38b70a11ff644c207b17b11d885bbafb7166e1b9bcc238b58a630f54c8cd0b4c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk5NapoACgkQzJrj3cAXR0mvsQCfQ46Qn7mdPqP60LiX+EuO6ktO
-ZAEAnj6+OGC3r7BFFswa7dvHp9HS7/m6
-=u71B
+iEYEAREKAAYFAk5Yea8ACgkQzJrj3cAXR0mZ8ACfd0IqfV1ens+R+ZGdDJKQfLeC
+sd0AoK6u1Hh1d1Fb2xvQfzlE9GipndQ3
+=o4II
 -----END PGP SIGNATURE-----
