@@ -2,6 +2,11 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*lettuce-0.1.32 (27 Aug 2011)
+
+  27 Aug 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.32.ebuild:
+  Version bump [460].
+
 *lettuce-0.1.31 (18 Aug 2011)
 
   18 Aug 2011; James Rowe <jnrowe@gmail.com> +lettuce-0.1.31.ebuild:
